--- a/web-react-app/src/style.css
+++ b/web-react-app/src/style.css
@@ -113,3 +113,28 @@ table img {
   width: 50px;
   height: 50px;
 }
+
+/* Clinics */
+.informacionClinicas {
+  display: flex;
+  gap: 20px;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.clinica {
+  background-color: #f4f4f4;
+  color: black;
+  width: 300px;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  text-align: center;
+}
+
+.clinica img {
+  border: 1px solid black;
+  border-radius: 10px;
+  width: 300px;
+  height: 200px;
+}
