--- a/web-react-app/src/style.css
+++ b/web-react-app/src/style.css
@@ -1,4 +1,4 @@
-/* HEADER */
+/* nav */
 nav {
   display: flex;
   flex-wrap: wrap;
@@ -36,9 +36,10 @@ nav a:hover {
   border-radius: 5px;
   background-color: aliceblue;
 }
-/* FIN HEADER */
+/* -------------------------------------------------------------------------*/
 
-/* LOGO GATOS UNIDOS */
+
+/* logo gatos unidos */
 .imgLogo {
   width: 100px;
   height: 90px;
@@ -46,50 +47,62 @@ nav a:hover {
   margin-right: 20px;
   border-radius: 5px;
 }
+/* -------------------------------------------------------------------------*/
 
 
-/* ESTILO BODY */
+/* body */
 body {
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    color: white;
-    margin: 0;
-    padding: 0;
-    background-color: #292929;
-  }
-  
-/* DIV PRINCIPAL PARA TODAS LAS PAGINAS */
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  color: white;
+  margin: 0;
+  padding: 0;
+  background-color: #292929;
+}
+/* -------------------------------------------------------------------------*/
+
+
+/* div principal para todas las paginas */
 .content {
   margin-top: 5%;
 }
+/* -------------------------------------------------------------------------*/
 
 
-table {
-  width: 70%;
-  margin: auto;
-  border-spacing: 30px; /* Espacio entre celdas */
-  border-collapse: separate; /* Necesario para que funcione */
+
+/* --------------------------COMPONENTES----------------------------------- */
+/*  Gatos.tsx */
+/* Contenedor de gatos */
+.informacionGatos {
+  display: flex;
+  gap: 20px;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
-table th {
-  font-size: 25px;
+/* Estilo de cada gato */
+.gato {
+  background-color: #f4f4f4;
+  color: black;
+  width: 300px;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
   text-align: center;
+  margin: 10px; /* Añadir margen para separar los elementos */
 }
 
-table td {
-  text-align: center;
-
-  border-spacing: 5px;
-}
-
-table img {
+/* Estilo de las imágenes de los gatos */
+.gato img {
+  border: 1px solid black;
+  border-radius: 10px;
   width: 300px;
   height: 200px;
-  display: block; /* Elimina el espacio extra debajo de la imagen */
-  margin: 0 auto; /* Centra la imagen dentro de la celda */
-  border-radius: 5px; /* Efecto borde */
 }
 
-/* PAGINA ABOUT-US */
+/* -------------------------------------------------------------------------*/
+
+
+/* AboutUs.tsx */
 .contenido-about-us {
   margin-top: 20px;
   font-family: 'Arial', sans-serif; /* Tipo de fuente */
@@ -108,33 +121,71 @@ table img {
   margin-bottom: 15px; /* Espacio entre párrafos */
   font-size: 16px; /* Tamaño de fuente */
 }
+/* -------------------------------------------------------------------------*/
 
+
+/* Clnics.tsx */
+/* Contenedor de Clinicas */
+.informacionClinicas {
+    display: flex;
+    gap: 20px;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  
+  /* Estilo para cada clinica */
+  .clinica {
+    background-color: #f4f4f4;
+    color: black;
+    width: 300px;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    text-align: center;
+    margin: 10px; /* Añadir margen para separar los elementos */
+  }
+  
+  /* Estilo de las imágenes de los gatos */
+  .clinica img {
+    border: 1px solid black;
+    border-radius: 10px;
+    width: 300px;
+    height: 200px;
+  }
+/* -------------------------------------------------------------------------*/
+
+
+/* Colaborate.tsx */
+table {
+  width: 70%;
+  margin: auto;
+  border-spacing: 30px; /* Espacio entre celdas */
+  border-collapse: separate; /* Necesario para que funcione */
+}
+
+table th {
+  font-size: 25px;
+  text-align: center;
+}
+
+table td {
+  text-align: center;
+  border-spacing: 5px;
+}
+
+table img {
+  width: 300px;
+  height: 200px;
+  display: block; /* Elimina el espacio extra debajo de la imagen */
+  margin: 0 auto; /* Centra la imagen dentro de la celda */
+  border-radius: 5px; /* Efecto borde */
+}
+/* -------------------------------------------------------------------------*/
+
+
+/* Contact.tsx */
 .fotoContacto {
   width: 50px;
   height: 50px;
 }
-
-/* Clinics */
-.informacionClinicas {
-  display: flex;
-  gap: 20px;
-  flex-wrap: wrap;
-  justify-content: center;
-}
-
-.clinica {
-  background-color: #f4f4f4;
-  color: black;
-  width: 300px;
-  padding: 10px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  text-align: center;
-}
-
-.clinica img {
-  border: 1px solid black;
-  border-radius: 10px;
-  width: 300px;
-  height: 200px;
-}
+/* -------------------------------------------------------------------------*/
