--- a/web-react-app/src/style.css
+++ b/web-react-app/src/style.css
@@ -3,8 +3,9 @@ nav {
   display: flex;
   flex-wrap: wrap;
   align-items: center;
-  width: 100%;
-  background-color: white;
+  width: 80%;
+  margin: 0 auto;
+  margin-top: 15px;
   height: 110px;
 }
 
@@ -19,33 +20,44 @@ nav ul {
 
 nav li {
   text-align: center;
+  padding: 5px;
 }
 
 nav li a {
+  border-radius: 10px;
   font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   display: block;
   padding: 10px;
   text-decoration: none;
-  color: 096674;
   font-size: 22px;
   text-align: center;
+  background-color: #1e4050;
 }
 
 nav a:hover {
-  color: #04c2df;
-  border-radius: 5px;
-  background-color: aliceblue;
+  color: white;
+  background-color: #5893a4;
+  box-shadow: inset 0 0 20px rgba(30, 64, 80, 0.7);
+}
+
+nav a:visited {
+  color: white;
 }
 /* -------------------------------------------------------------------------*/
 
 
 /* logo gatos unidos */
 .imgLogo {
-  width: 100px;
-  height: 90px;
+  width: 85px;
+  height: 80px;
   margin: 10px;
   margin-right: 20px;
   border-radius: 5px;
+}
+
+.imgLogo:hover {
+  transition: transform 0.9s ease;
+  transform: rotate(360deg);
 }
 /* -------------------------------------------------------------------------*/
 
@@ -54,9 +66,11 @@ nav a:hover {
 body {
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   color: white;
-  margin: 0;
+  margin: 0 auto;
   padding: 0;
-  background-color: #292929;
+  background-color: white;
+  width: 80%;
+  height: 100%;
 }
 /* -------------------------------------------------------------------------*/
 
@@ -89,6 +103,7 @@ body {
   border-radius: 5px;
   text-align: center;
   margin: 10px; /* Añadir margen para separar los elementos */
+  box-shadow: inset 0 0 20px rgba(30, 64, 80, 0.2);
 }
 
 /* Estilo de las imágenes de los gatos */
@@ -97,6 +112,7 @@ body {
   border-radius: 10px;
   width: 300px;
   height: 200px;
+  box-shadow: 0 0 20px #1e4050;
 }
 
 /* -------------------------------------------------------------------------*/
@@ -134,7 +150,7 @@ body {
   }
   
   /* Estilo para cada clinica */
-  .clinica {
+  .clinica{
     background-color: #f4f4f4;
     color: black;
     width: 300px;
@@ -143,14 +159,15 @@ body {
     border-radius: 5px;
     text-align: center;
     margin: 10px; /* Añadir margen para separar los elementos */
+    box-shadow: inset 0 0 20px rgba(30, 64, 80, 0.2);
   }
-  
-  /* Estilo de las imágenes de los gatos */
+  /* Estilo de las imágenes de las clinicas */
   .clinica img {
     border: 1px solid black;
     border-radius: 10px;
     width: 300px;
     height: 200px;
+    box-shadow: 0 0 20px #1e4050;
   }
 /* -------------------------------------------------------------------------*/
 
@@ -189,3 +206,11 @@ table img {
   height: 50px;
 }
 /* -------------------------------------------------------------------------*/
+
+
+/** Footer */
+footer {
+  text-align: center;
+  background-color: #1e4050;
+  color: white;
+}
