--- a/web-react-app/src/style.css
+++ b/web-react-app/src/style.css
@@ -24,6 +24,7 @@ nav li {
 }
 
 nav li a {
+  color: white;
   border-radius: 10px;
   font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   display: block;
