--- a/web-react-app/src/style.css
+++ b/web-react-app/src/style.css
@@ -79,6 +79,7 @@ body {
 
 /* div principal para todas las paginas */
 .content {
+  width: 100%;
   margin-top: 5%;
 }
 /* -------------------------------------------------------------------------*/
@@ -86,7 +87,8 @@ body {
 
 
 /* --------------------------COMPONENTES----------------------------------- */
-/*  Gatos.tsx */
+
+/* Gatos.tsx */
 /* Contenedor de gatos */
 .informacionGatos {
   display: flex;
@@ -96,7 +98,7 @@ body {
 }
 
 /* Estilo de cada gato */
-.gato {
+.gatos {
   background-color: #f4f4f4;
   color: black;
   width: 300px;
@@ -109,12 +111,45 @@ body {
 }
 
 /* Estilo de las imágenes de los gatos */
-.gato img {
+.gatos img {
   border: 1px solid black;
   border-radius: 10px;
   width: 300px;
   height: 200px;
   box-shadow: 0 0 20px #1e4050;
+}
+
+
+.informacionGato {
+  width: 80%;
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
+}
+
+.gato {
+
+  display: flex;
+  align-items: center; /* Centra verticalmente la imagen y la información */
+  gap: 20px; /* Espacio entre la imagen y la información */
+  border-radius: 10px;
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
+  padding: 20px;
+  width: 100%;
+  background-color: #f4f4f4;
+}
+
+.gato img {
+  border-radius: 10px;
+  width: 300px;
+  height: 200px;
+}
+
+.gato h3 {
+  font-size: 2rem;
+  margin-bottom: 10px;
 }
 
 /* -------------------------------------------------------------------------*/
