--- a/web-react-app/src/css/NavBar.css
+++ b/web-react-app/src/css/NavBar.css
@@ -7,41 +7,75 @@ nav {
     margin-top: 10px;
     height: 110px;
     padding-left: 10px;
-  }
+}
   
-  nav ul {
-    background-color: #1e4050;
-    list-style-type: none;
-    border-radius: 10px;
-    padding: 0;
-    margin: 0;
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-  }
+nav ul {
+  background-color: #1e4050;
+  list-style-type: none;
+  border-radius: 10px;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
   
-  nav li {
-    text-align: center;
-    padding: 5px;
-  }
+nav li {
+  text-align: center;
+  padding: 10px;
+}
   
-  nav li a {
-    color: white;
-    border-radius: 10px;
-    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+nav li a {
+  color: white;
+  border-radius: 5px;
+  font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  display: block;
+  padding: 5px;
+  text-decoration: none;
+  font-size: 22px;
+  text-align: center;
+}
+  
+nav li a:hover {
+  color: #1e4050;
+  background-color: white;
+  padding: 5px;
+
+}
+
+nav a:visited {
+  color: white;
+}
+
+.desplegable-contenido {
+  width: 100px;
+  display: none;
+  position: absolute;
+  background-color: #1e4050;
+  list-style: none;
+  border: 2px solid white;
+}
+
+.colabora:hover .desplegable-contenido{
     display: block;
-    padding: 10px;
-    text-decoration: none;
-    font-size: 22px;
-    text-align: center;
-  }
-  
-  nav a:hover {
-    color: white;
-    background-color: #5893a4;
-    box-shadow: inset 0 0 20px rgba(30, 64, 80, 0.7);
-  }
-  
-  nav a:visited {
-    color: white;
-  }
+    width: 85px;
+}
+
+.desplegable-contenido li {
+  padding: 3px;
+}
+
+.desplegable-contenido li a {
+  font-size: 14px;
+  color: white;
+  text-decoration: none;
+  display: block;
+  border-radius: 5px;
+  text-align: left;
+}
+
+.desplegable-contenido li a:hover {
+  background-color: white;
+  color: #1e4050;
+}
+
