--- a/web-react-app/src/css/style.css
+++ b/web-react-app/src/css/style.css
@@ -31,6 +31,8 @@ body {
   padding-top: 10px;
   padding-bottom: 10px;
   background-color: white;
+  border: 1px solid #1e4050;
+  border-radius: 10px;
 }
 
 
