--- a/web-react-app/src/css/Gatos.css
+++ b/web-react-app/src/css/Gatos.css
@@ -32,3 +32,9 @@
     font-weight: bold;
     color: #1e4050;
   }
+
+  .descripcionGato {
+    font-size: 16px;
+    color: #333;
+    margin-top: 10px;
+  }
