--- a/web-react-app/src/css/style.css
+++ b/web-react-app/src/css/style.css
@@ -28,6 +28,7 @@ body {
 /* div principal para todas las paginas, es el primer div del body*/
 .content {
   width: 100%;
+  height: auto;
   padding-top: 10px;
   padding-bottom: 10px;
   background-color: white;
