--- a/web-react-app/src/css/Gato.css
+++ b/web-react-app/src/css/Gato.css
@@ -1,27 +1,11 @@
-.informacionGato {
+.contenedorGato {
   margin: 0 auto;
   margin-top: 20px;
   margin-bottom: 20px;
   width: 90%;
   display: flex;
-  justify-content: space-between;
-  align-items: flex-start; /* mejor para alinear arriba */
-  gap: 40px;
-  padding: 20px;
-}
-
-.gato {
-  width: 50%;
-  display: flex;
-  flex-wrap: wrap;
-  gap: 10px;
   justify-content: center;
-}
-
-.gato img {
-  width: 280px;
-  height: 200px;
-  border-radius: 12px;
+  align-items: flex-start; /* mejor para alinear arriba */
 }
 
 .fichaGato {
@@ -203,3 +187,19 @@
   border: 1px solid #ccc;
   font-size: 13px;
 }
+
+.gato {
+  width: 50%;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+  justify-content: space-evenly;
+}
+
+.gato img {
+  width: 300px;
+  height: 200px;
+  border-radius: 12px;
+}
+
+
