--- a/web-react-app/src/css/Gatos.css
+++ b/web-react-app/src/css/Gatos.css
@@ -1,40 +1,81 @@
-.informacionGatos {
-    display: flex;
-    gap: 20px;
-    flex-wrap: wrap;
-    justify-content: center;
-    padding-bottom: 10px;
-  }
-  
-  .gatos {
-    background-color: #f4f4f4;
-    color: black;
-    width: 300px;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    text-align: center;
-    margin: 10px;
-    box-shadow: inset 0 0 20px rgba(30, 64, 80, 0.2);
-  }
-  
-  .gatos img {
-    border: 1px solid black;
-    border-radius: 10px;
-    width: 300px;
-    height: 200px;
-    box-shadow: 0 0 20px #1e4050;
-  }
+.tituloGatos {
+  text-align: center;
+  font-size: 24px;
+  font-weight: bold;
+  color: #1e4050;
+}
 
-  .tituloGatos {
-    text-align: center;
-    font-size: 24px;
-    font-weight: bold;
-    color: #1e4050;
-  }
+.contenedorGatos {
+  display: flex;
+  gap: 20px;
+  justify-content: center;
+  padding-bottom: 10px;
+}
 
-  .descripcionGato {
-    font-size: 16px;
-    color: #333;
-    margin-top: 10px;
-  }
+.gatos {
+  color: black;
+  width: 300px;
+  border-radius: 10px;
+  text-align: center;
+  margin: 0; /* Elimina el margen extra alrededor de .gato */
+  box-shadow: inset 0 0 20px rgba(30, 64, 80, 0.2);
+  border: 1px solid black;
+  gap: 0;
+}
+
+.gatoFotos {
+  width: 300px;
+  height: 200px;
+}
+
+.gatos:hover {
+  box-shadow: 0 0 20px #1e4050;
+  transition: box-shadow 0.3s ease;
+}
+
+.gatos img {
+  border-radius: 10px;
+  border-bottom-left-radius: 0px;
+  border-bottom-right-radius: 0px;
+  width: 300px;
+  height: 200px;
+  box-shadow: 0 0 20px #1e4050;
+}
+
+.informacionGato {
+  display: flex;
+  width: 300px;
+  height: 100px;
+  flex-direction: column;
+  justify-content: flex-start; /* Asegura que los elementos estén alineados al principio */
+  gap: 0px; /* Controla la separación entre los elementos */
+  margin: 0; /* Elimina cualquier margen extra */
+  padding: 0; /* Elimina cualquier padding extra */
+  align-items: center;
+}
+
+.nombreGato {
+  font-family: Arial, sans-serif;
+  font-size: 20px;
+  font-weight: bold;
+  color: white;
+  background-color: #5b96a6;
+  padding: 5px;
+  margin-top: -20px;
+  border-radius: 10px;
+  border: 2px solid white;
+}
+
+.nombreGato:hover {
+  background-color: white;
+  color: #1e4050;
+  border: 2px solid #1e4050;
+  transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+.descripcionGato {
+  font-family: Arial, sans-serif;
+  font-size: 16px;
+  color: #333;
+  margin: 0;
+}
