--- a/web-react-app/src/css/Gato.css
+++ b/web-react-app/src/css/Gato.css
@@ -1,3 +1,10 @@
+.tituloGato {
+  text-align: center;
+  font-size: 24px;
+  font-weight: bold;
+  color: #1e4050;
+}
+
 .contenedorGato {
   margin: 0 auto;
   margin-top: 20px;
@@ -10,14 +17,12 @@
 
 .fichaGato {
   padding: 10px;
-  background: linear-gradient(90deg, #f7f4f4, #e1dbdb);
   display: flex;
   flex-wrap: wrap;
   width: 50%;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   display: flex;
-  flex-direction: column;
-  justify-content: center;
+  justify-content: left;
   border-radius: 10px;
 }
 
@@ -35,10 +40,24 @@
 
 .atributos {
   align-items: center;
+  font-size: 17px;;
   display: flex;
   flex-wrap: wrap;
   gap: 10px;
-  margin-top: 20px;
+  margin-top: 10px;
+  margin-right: 10px;
+}
+
+.id {
+  background: linear-gradient(135deg, #6a11cb, #2575fc); /* violeta a azul */
+  padding: 10px 10px;
+  border-radius: 12px;
+  color: white;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: bold;
+  font-size: 1.1rem;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+  transition: transform 0.2s ease, box-shadow 0.2s ease;
 }
 
 .nombre {
@@ -142,36 +161,6 @@
   font-weight: bold;
 }
 
-.editarFicha {
-  width: 150px;
-  margin-top: 50px;
-  cursor: pointer;
-  padding: 8px 12px;
-  background-color: #abaaaa;
-  border-radius: 8px;
-  font-weight: bold;
-  transition: background-color 0.2s ease;
-}
-
-.editarFicha:hover {
-  background-color: #7a7a7a;
-}
-
-.guardarFicha {
-  width: 150px;
-  margin-top: 50px;
-  cursor: pointer;
-  padding: 8px 12px;
-  background-color: #abaaaa;
-  border-radius: 8px;
-  font-weight: bold;
-  transition: background-color 0.2s ease;
-}
-
-.guardarFicha:hover {
-  background-color: #7a7a7a;
-}
-
 .input {
   width: 100px;
   padding: 10px;
@@ -202,4 +191,95 @@
   border-radius: 12px;
 }
 
+/* ######################################## MODO EDITAR GATO */
+.contenedorGatoEditar {
+  margin: 0 auto;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  width: 90%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 
+.botonEditarGato {
+  width: 150px;
+  margin-top: 50px;
+  cursor: pointer;
+  padding: 8px 12px;
+  background-color: #5aea66;
+  border-radius: 8px;
+  font-weight: bold;
+  transition: background-color 0.2s ease;
+}
+
+.botonEditarGato:hover {
+  background-color: #7a7a7a;
+}
+
+/* ######################################## MODO INSERTAR GATO */
+.contenedorGatoInsertar {
+  margin: 0 auto;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  width: 90%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.botonInsertarGato {
+  width: 150px;
+  margin-top: 50px;
+  cursor: pointer;
+  padding: 8px 12px;
+  background-color: #5aea66;
+  border-radius: 8px;
+  font-weight: bold;
+  transition: background-color 0.2s ease;
+}
+
+.botonInsertarGato:hover {
+  background-color: #ffff00;
+}
+
+/* ######################################## MODO ELIMINAR GATO */
+.contenedorGatoEliminar {
+  margin: 0 auto;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  width: 90%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.contenedorGatoEliminar .fichaGato {
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  width: auto;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  display: flex;
+  justify-content: center;
+  border-radius: 10px;
+}
+
+.botonEliminarGato {
+  width: 150px;
+  margin-top: 50px;
+  cursor: pointer;
+  padding: 8px 12px;
+  background-color: #5aea66;
+  border-radius: 8px;
+  font-weight: bold;
+  transition: background-color 0.2s ease;
+}
+
+.botonEliminarGatoo:hover {
+  background-color: #ffff00;
+}
+
+.contenedorGatoEliminar .gato {
+  margin-top: 30px;
+}
