--- a/web-react-app/src/css/Gatos.css
+++ b/web-react-app/src/css/Gatos.css
@@ -79,3 +79,21 @@
   color: #333;
   margin: 0;
 }
+
+.crud {
+  margin-top: 10px;
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+}
+
+.botonCRUD {
+  background-color: rgb(222, 222, 222);
+  color: black;
+  border: none;
+  padding: 5px;
+  border-radius: 2px;
+  cursor: pointer;
+  font-size: 13px;
+  border: 1px solid black;
+}
