--- a/web-react-app/src/css/Clinics.css
+++ b/web-react-app/src/css/Clinics.css
@@ -1,35 +1,83 @@
-.informacionClinicas {
-    display: flex;
-    gap: 20px;
-    flex-wrap: wrap;
-    justify-content: center;
-  }
-  
-  /* Estilo para cada clinica */
-  .clinicas{
-    background-color: #f4f4f4;
-    color: black;
-    width: 300px;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    text-align: center;
-    margin: 10px; /* Añadir margen para separar los elementos */
-    box-shadow: inset 0 0 20px rgba(30, 64, 80, 0.2);
-  }
-  /* Estilo de las imágenes de las clinicas */
-  .clinicas img {
-    border: 1px solid black;
-    border-radius: 10px;
-    width: 300px;
-    height: 200px;
-    box-shadow: 0 0 20px #1e4050;
-  }
+.tituloClinicas {
+  text-align: center;
+  font-size: 24px;
+  font-weight: bold;
+  color: #1e4050;
+}
 
-  .tituloClinicas {
-    text-align: center;
-    font-size: 24px;
-    font-weight: bold;
-    color: #1e4050;
-    margin-bottom: 10px;
-  }
+.contenedorClinicas {
+  display: flex;
+  gap: 20px;
+  justify-content: center;
+  padding-bottom: 10px;
+}
+  
+.clinicas{
+  color: black;
+  width: 350px;
+  border-radius: 10px;
+  text-align: center;
+  margin: 0;
+  box-shadow: inset 0 0 20px rgba(30, 64, 80, 0.2);
+  border: 1px solid black;
+  gap: 0;
+  cursor: pointer;
+}
+
+.clinicasFoto {
+  width: 350px;
+  height: 200px;
+}
+
+.clinicas:hover {
+  box-shadow: 0 0 20px #1e4050;
+  transition: box-shadow 0.3s ease;
+}
+
+.clinicas img {
+  border-radius: 10px;
+  border-bottom-left-radius: 0px;
+  border-bottom-right-radius: 0px;
+  width: 350px;
+  height: 200px;
+  box-shadow: 0 0 20px #1e4050;
+}
+
+.informacionClinica {
+  display: flex;
+  width: 350px;
+  height: 100px;
+  flex-direction: column;
+  justify-content: flex-start; /* Asegura que los elementos estén alineados al principio */
+  gap: 0px; /* Controla la separación entre los elementos */
+  margin: 0; /* Elimina cualquier margen extra */
+  padding: 0; /* Elimina cualquier padding extra */
+  align-items: center;
+}
+
+.nombreClinica {
+  font-family: Arial, sans-serif;
+  font-size: 20px;
+  font-weight: bold;
+  color: white;
+  background-color: #5b96a6;
+  padding: 5px;
+  margin-top: -20px;
+  border-radius: 10px;
+  border: 2px solid white;
+}
+
+.nombreClinica:hover {
+  background-color: white;
+  color: #1e4050;
+  border: 2px solid #1e4050;
+  transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+.atributoClinica {
+  font-family: Arial, sans-serif;
+  padding: 2px;
+  font-size: 16px;
+  color: #1e4050;
+  margin-top: -10px;
+}
