--- a/web-react-app/src/css/Gato.css
+++ b/web-react-app/src/css/Gato.css
@@ -1,10 +1,3 @@
-.tituloGato {
-  text-align: center;
-  font-size: 24px;
-  font-weight: bold;
-  color: #1e4050;
-}
-
 .contenedorGato {
   margin: 0 auto;
   margin-top: 20px;
@@ -38,11 +31,10 @@
   color: #333;
 }
 
-.atributos {
+.atributosGato{
   align-items: center;
-  font-size: 17px;;
+  font-size: 17px;
   display: flex;
-  flex-wrap: wrap;
   gap: 10px;
   margin-top: 10px;
   margin-right: 10px;
