--- a/web-react-app/src/css/Gatos.css
+++ b/web-react-app/src/css/Gatos.css
@@ -17,13 +17,14 @@
   width: 300px;
   border-radius: 10px;
   text-align: center;
-  margin: 0; /* Elimina el margen extra alrededor de .gato */
+  margin: 0;
   box-shadow: inset 0 0 20px rgba(30, 64, 80, 0.2);
   border: 1px solid black;
   gap: 0;
+  cursor: pointer;
 }
 
-.gatoFotos {
+.gatosFoto {
   width: 300px;
   height: 200px;
 }
