--- a/web-react-app/src/css/Clinica.css
+++ b/web-react-app/src/css/Clinica.css
@@ -48,7 +48,6 @@
   color: #1e4050;
   padding: 5px;
   margin: 0;
-  margin-bottom: 10px;
   border-radius: 10px;
   border: 2px solid white;
 }
@@ -69,10 +68,10 @@
 }
 
 .mapa-ubicacion {
+  margin-top: 10px;
   border: 0;
   border-radius: 10px;
   width: 80%;
-  height: auto;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
