actualizado color de elementos de la lista (navbar)

--- a/web-react-app/src/css/NavBar.css
+++ b/web-react-app/src/css/NavBar.css
@@ -25,7 +25,7 @@ nav li {
 }
   
 nav li a {
-  color: white;
+  color: #1e4050;
   font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   display: block;
   padding: 5px;
