--- a/web-react-app/src/css/Clinica.css
+++ b/web-react-app/src/css/Clinica.css
@@ -1,44 +1,9 @@
 .contenedorClinica {
-  margin: 0 auto;
   margin-top: 20px;
   margin-bottom: 20px;
-  width: 90%;
+  width: 95%;
   display: flex;
-  justify-content: space-between;
-  align-items: flex-start;
-}
-
-.fichaClinica {
-  margin: -10px;
-  display: flex;
-  flex-wrap: wrap;
-  width: 50%;
-  height: auto;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  display: flex;
-  justify-content: left;
-  border-radius: 10px;
-}
-
-.fichaClinica h2 {
-  font-size: 24px;
-  margin-bottom: 12px;
-  color: #1e4050;
-}
-
-.fichaClinica p {
-  margin: 3px 0;
-  font-size: 16px;
-  color: #333;
-}
-
-.nombre_imagen_mapa_Clinica {
-  width: 50%;
-  height: auto;
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: column;
-  align-items: center;
+  justify-content: center;
 }
 
 .clinicaNombre {
@@ -50,6 +15,15 @@
   margin: 0;
   border-radius: 10px;
   border: 2px solid white;
+}
+
+.nombre_imagen_mapa_Clinica {
+  width: 60%;
+  height: auto;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  align-items: center;
 }
 
 .nombre_imagen_mapa_Clinica img {
@@ -72,115 +46,57 @@
   border: 0;
   border-radius: 10px;
   width: 80%;
+  height: 200px;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
 }
 
-.especialidad {
-  display: inline-block;
-  background: #6a11cb;
-  background: linear-gradient(135deg, #6a11cb, #2575fc);
-  color: white;
-  padding: 10px 10px;
-  border-radius: 12px;
-  font-weight: bold;
-}
-
-.descripcion {
-  background: linear-gradient(135deg, #00c9ff, #92fe9d);
-  color: #002b36;
-  padding: 10px 10px; /* más ajustado verticalmente */
-  border-radius: 12px;
-  font-weight: bold;
-}
-
-.direccion {
-  display: inline-block;
-  background: linear-gradient(135deg, #f953c6, #b91d73);
-  color: white;
-  padding: 10px 10px;
-  border-radius: 12px;
-  font-weight: bold;
-}
-
-.telefono {
-  display: inline-block;
-  background: linear-gradient(135deg, #ff5f6d, #ffc371);
-  color: white;
-  padding: 10px 10px;
-  border-radius: 12px;
-  font-weight: bold;
-}
-
-.email {
-  display: inline-block;
-  background: linear-gradient(135deg, #00b09b, #96c93d);
-  color: white;
-  padding: 10px 10px;
-  border-radius: 12px;
-  font-weight: bold;
-}
-
-.web {
-  display: inline-block;
-  background: linear-gradient(135deg, #ee9ca7, #ffdde1);
-  color: #333;
-  padding: 10px 10px;
-  border-radius: 12px;
-  font-weight: bold;
-}
-
-.horario {
-  display: inline-block;
-  background: linear-gradient(135deg, #2193b0, #6dd5ed);
-  color: white;
-  padding: 10px 10px;
-  border-radius: 12px;
-  font-weight: bold;
-}
-
-.servicios {
-  display: inline-block;
-  background: linear-gradient(135deg, #c6ffdd, #fbd786, #f7797d);
-  color: #333;
-  padding: 10px 10px;
-  border-radius: 12px;
-  font-weight: bold;
-}
-
-.ubicacion {
-  display: inline-block;
-  background: linear-gradient(135deg, #56ab2f, #a8e063);
-  color: white;
-  padding: 10px 10px;
-  border-radius: 12px;
-  font-weight: bold;
-}
-
-.valoracion {
-  display: inline-block;
-  background: linear-gradient(135deg, #e96443, #904e95);
-  color: white;
-  padding: 10px 10px;
-  border-radius: 12px;
-  font-weight: bold;
-}
-
-.reseñas {
-  display: inline-block;
-  background: linear-gradient(135deg, #ff416c, #ff4b2b);
-  color: white;
-  padding: 10px 10px;
-  border-radius: 12px;
-  font-weight: bold;
-}
-
-.atributosClinica {
-  align-items: center;
-  font-size: 17px;
+.fichaClinica {
+  margin-top: 15px;
   display: flex;
-  gap: 10px;
-  margin-top: 10px;
-  margin-right: 10px;
+  flex-direction: column;
+  width: 40%;
+  height: auto;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  justify-content: left;
+  border-radius: 10px;
+}
+
+.atributoClinica {
+  display: inline-block;
+  width: 120px;
+  background: #1e4050;
+  color: white;
+  padding: 6px 8px;
+  border-radius: 12px;
+  font-weight: bold;
+  font-size: 20px;
+  align-self: flex-start;
+  text-align: center;
+}
+
+.textoClinica {
+  font-family: 'Arial', sans-serif;
+  line-height: 1.6;
+  padding: 3px 0;
+  border-radius: 10px;
+  max-width: 800px;
+  text-align: justify;
+}
+
+.lista-horario, .lista-servicios {
+  list-style: none;
+  font-family: 'Arial', sans-serif;
+  line-height: 1.6;
+  padding: 5px;
+  border-radius: 10px;
+  max-width: 800px;
+  text-align: justify;
+}
+
+.fichaClinica p {
+  margin: 3px 0;
+  font-size: 16px;
+  color: #333;
 }
