--- a/web-react-app/src/css/Gatos.css
+++ b/web-react-app/src/css/Gatos.css
@@ -1,3 +1,7 @@
+a {
+  text-decoration: none;
+}
+
 .tituloGatos {
   text-align: center;
   font-size: 34px;
@@ -8,6 +12,7 @@
 .contenedorGatos {
   display: flex;
   gap: 20px;
+  flex-wrap: wrap;
   justify-content: center;
   padding-bottom: 10px;
 }
@@ -74,7 +79,7 @@
   transition: background-color 0.3s ease, color 0.3s ease;
 }
 
-.descripcionGato {
+.razaGato, .edadGato {
   font-family: Arial, sans-serif;
   font-size: 16px;
   color: #333;
