--- a/web-react-app/src/css/NavBar.css
+++ b/web-react-app/src/css/NavBar.css
@@ -5,7 +5,7 @@ nav {
     width: 100%;
     margin: 0 auto;
     margin-top: 10px;
-    height: 110px;
+    height: auto;
     padding-left: 10px;
 }
   
