fusionado componente contacto en quienes-somos

--- a/web-react-app/src/css/AboutUs.css
+++ b/web-react-app/src/css/AboutUs.css
@@ -1,12 +1,60 @@
-.contenido-about-us {
-    margin: 20px;
-    font-family: 'Arial', sans-serif; /* Tipo de fuente */
-    line-height: 1.6; /* Espaciado entre líneas */
-    padding: 20px; /* Espacio alrededor del texto */
-    background-color: #f4f4f4; /* Fondo suave */
-    border-radius: 10px; /* Bordes redondeados */
-    max-width: 800px; /* Ancho máximo */
-    margin: 0 auto; /* Centrado */
-    text-align: justify; /* Justifica el texto para que todas las líneas sean del mismo ancho */
-  }
-  
+.contenedorContenido {
+  width: 80%;
+  margin: 0 auto;
+  display: flex;
+  align-items: flex-start;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  border-radius: 10px;
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+
+.contenedor_imagen_contacto {
+  width: 48%;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 30px;
+}
+
+.imagenRefugio {
+  width: 100%;
+  height: auto;
+}
+
+.imagenRefugio img {
+  width: 100%;
+  height: auto;
+  border-radius: 10px;
+}
+
+.contenedor_contacto {
+  width: 100%;
+  height: auto;
+  text-align: center;
+}
+
+.contenedor_contacto img {
+  width: 30%;
+  height: auto;
+}
+
+.texto-whatsapp {
+  font-family: 'Arial', sans-serif;
+}
+
+.contenedor_texto_refugio {
+  width: 45%;
+}
+
+.contenedor_texto_refugio p:first-of-type {
+  margin-top: 0;
+}
+
+.textoRefugio {
+  font-family: 'Arial', sans-serif;
+  line-height: 1.6;
+  text-align: justify;
+}
