--- a/web-react-app/src/css/style.css
+++ b/web-react-app/src/css/style.css
@@ -31,7 +31,7 @@ body {
   height: auto;
   padding-top: 10px;
   padding-bottom: 10px;
-  background-color: white;
+  background-color: #f4f4f4;
   border: 1px solid #1e4050;
   border-radius: 10px;
 }
