--- a/web-react-app/src/css/AboutUs.css
+++ b/web-react-app/src/css/AboutUs.css
@@ -3,7 +3,7 @@
   margin: 0 auto;
   display: flex;
   align-items: flex-start;
-  flex-wrap: wrap;
+  flex-wrap: wrap; /* Permite que los elementos se acomoden en nuevas líneas cuando no haya espacio suficiente */
   justify-content: space-between;
   border-radius: 10px;
   margin-top: 30px;
@@ -41,6 +41,11 @@
   height: auto;
 }
 
+.contenedor_contacto img:hover {
+  background-color: grey;
+  border-radius: 20px;
+}
+
 .texto-whatsapp {
   font-family: 'Arial', sans-serif;
 }
@@ -57,4 +62,26 @@
   font-family: 'Arial', sans-serif;
   line-height: 1.6;
   text-align: justify;
+}
+
+/* Media query para pantallas pequeñas */
+@media (max-width: 768px) {
+  .contenedorContenido {
+    width: 95%;
+    flex-direction: column; /* Los elementos se apilan verticalmente */
+    align-items: center; /* Centra los elementos */
+  }
+
+  .contenedor_imagen_contacto,
+  .contenedor_texto_refugio {
+    width: 100%; /* Ocupa el 100% del espacio disponible */
+  }
+
+  .contenedor_contacto img {
+    width: 50%; /* Ajusta el tamaño de la imagen en pantallas más pequeñas */
+  }
+
+  .contenedor_texto_refugio {
+    margin-top: 20px; /* Agrega margen entre los bloques de texto y las imágenes */
+  }
 }
