--- a/web-react-app/src/css/NavBar.css
+++ b/web-react-app/src/css/NavBar.css
@@ -1,12 +1,12 @@
 nav {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    width: 100%;
-    margin: 0 auto;
-    margin-top: 10px;
-    height: auto;
-    padding-left: 10px;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  max-width: 1200px;
+  width: 90%;
+  margin: 10px auto;
+  height: auto;
+  padding-left: 0;
 }
   
 nav ul {
