--- a/web-react-app/src/css/style.css
+++ b/web-react-app/src/css/style.css
@@ -1,13 +1,15 @@
 body {
   min-height: 100vh;
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-  color: black;
   margin: 0;
   padding: 0;
+  overflow-x: hidden;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   background-color: white;
   background-image: url(../img/fondo-web.jpg);
-  height: 100%;
   background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  box-sizing: border-box;
 }
 
 
